--- a/style.css
+++ b/style.css
@@ -1,6 +1,58 @@
 body{
+    margin:0% 3% 0% 3%;
+    width: 95%;
     background-color: azure;
+    font-family: Arial, Helvetica, sans-serif;
 }
 h1{
+    font-size: 28px;
     text-align: center;
+    text-shadow: grey 2px 2px 5px;
+}
+
+h2{
+    font-size: 24px;
+    text-align: center;
+    text-shadow: grey 2px 2px 5px;  
+}
+
+h3{
+    font-size: 20px;
+    text-align: center;
+    text-shadow: grey 2px 2px 5px;  
+}
+
+ul{
+    line-height: 200%;
+}
+
+p{
+    line-height: 200%;
+}
+a{
+    text-decoration: none;
+    color: blue;
+}
+
+#figtitle{
+    align-self: center;
+}
+
+#menu{
+    display:flex;
+    justify-content: space-between;
+    background-color: blanchedalmond;
+    font-size: 20px;
+    padding:10px;
+}
+
+.column{
+    position: absolute;
+    width: 40%;
+}
+
+#lavar{
+    position: absolute;
+    right: 3%;
+    width: 52%;
 }
