--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin:0% 3% 0% 3%;
     width: 95%;
-    background-color: azure;
+    background-color:whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1{
@@ -18,7 +18,7 @@ h2{
 
 h3{
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     text-shadow: grey 2px 2px 5px;  
 }
 
@@ -34,6 +34,11 @@ a{
     color: blue;
 }
 
+#menu a:hover{
+    background-color: white;
+    color:black;
+}
+
 #figtitle{
     align-self: center;
 }
@@ -41,9 +46,14 @@ a{
 #menu{
     display:flex;
     justify-content: space-between;
-    background-color: blanchedalmond;
+    background-color:grey;
     font-size: 20px;
     padding:10px;
+}
+
+#menu a{
+    color:white;
+    font-weight: bold;
 }
 
 .column{
@@ -55,4 +65,8 @@ a{
     position: absolute;
     right: 3%;
     width: 52%;
+}
+
+#lavar h3{
+    text-align: center;
 }
